--- a/tabs/package.json
+++ b/tabs/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-junit": "^14.0.0",
     "prettier": "^2.6.2",
     "stylelint": "^14.8.5",
     "stylelint-config-idiomatic-order": "^8.1.0",
