--- a/tabs/package.json
+++ b/tabs/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "teamsfx-template-tab",
+  "name": "@eeacms/eionet2-user-management",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
+  "description": "Teams app for managing Eionet users.",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
@@ -38,6 +39,7 @@
     "stylelint-prettier": "^2.0.0"
   },
   "scripts": {
+    "prepare": "npm run build",
     "test": "jest",
     "start": "react-scripts start",
     "build": "react-scripts build",
