--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,34 +22,37 @@
             }
         },
         {
-            "name": "Start and Attach to Frontend (Edge)",
+            "name": "Attach to Frontend (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "preLaunchTask": "Start Frontend",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
             }
         },
         {
-            "name": "Start and Attach to Frontend (Chrome)",
+            "name": "Attach to Frontend (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "preLaunchTask": "Start Frontend",
+            "cascadeTerminateToConfigurations": [
+                "Attach to Backend"
+            ],
             "presentation": {
                 "group": "all",
                 "hidden": true
             }
         },
         {
-            "name": "Start and Attach to Backend",
+            "name": "Attach to Backend",
             "type": "pwa-node",
             "request": "attach",
             "port": 9229,
             "restart": true,
-            "preLaunchTask": "Start Backend",
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -61,10 +64,10 @@
         {
             "name": "Debug (Edge)",
             "configurations": [
-                "Start and Attach to Frontend (Edge)",
-                "Start and Attach to Backend"
+                "Attach to Frontend (Edge)",
+                "Attach to Backend"
             ],
-            "preLaunchTask": "Pre Debug Check",
+            "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
                 "group": "all",
                 "order": 2
@@ -74,10 +77,10 @@
         {
             "name": "Debug (Chrome)",
             "configurations": [
-                "Start and Attach to Frontend (Chrome)",
-                "Start and Attach to Backend"
+                "Attach to Frontend (Chrome)",
+                "Attach to Backend"
             ],
-            "preLaunchTask": "Pre Debug Check",
+            "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
                 "group": "all",
                 "order": 1
