--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
         "dev": "func start --javascript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
-        "start": "npx func start"
+        "start": "npx func start",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
         "@microsoft/teamsfx": "^0.5.0",
