--- a/tabs/package.json
+++ b/tabs/package.json
@@ -41,8 +41,10 @@
   "scripts": {
     "prepare": "npm run build",
     "test": "jest",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
+    "start": "cross-env GENERATE_SOURCEMAP=false react-scripts start",
+    "install:teamsfx": "npm install",
+    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "build:teamsfx": "cross-env-shell \"env-cmd -f .env.teamsfx.${TEAMS_FX_ENV} npm run build\"",
     "build:teamsfx:dev": "cross-env TEAMS_FX_ENV=dev npm run build:teamsfx",
     "eject": "react-scripts eject",
