--- a/tabs/.env.teamsfx.dev
+++ b/tabs/.env.teamsfx.dev
@@ -7,4 +7,5 @@ REACT_APP_FUNC_ENDPOINT=https://eionettestdev709099api.azurewebsites.net
 
 # Following variables can be customized or you can add your owns
 # FOO=BAR
-
+REACT_APP_SHAREPOINT_SITE_ID=7lcpdm.sharepoint.com,bf9359de-0f13-4b00-8b5a-114f6ef3bfb0,6609a994-5225-4a1d-bd05-a239c7b45f72
+REACT_APP_CONFIGURATION_LIST_ID=010b1be2-0df5-4ab1-b2a7-17e010aae775
