--- a/tabs/package.json
+++ b/tabs/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.5.1",
     "@mui/x-data-grid": "^5.6.1",
     "axios": "^0.26.1",
+    "date-fns": "^2.29.3",
     "msteams-react-base-component": "^3.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
