--- a/tabs/package.json
+++ b/tabs/package.json
@@ -19,6 +19,7 @@
     "postcss-scss": "^4.0.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
     "validator": "^13.7.0"
