fix: sonar qube issues

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "msteams-apps",
+    "name": "eionet2-user-management",
     "version": "0.0.15",
     "description": "",
     "author": "",
