--- a/env/.env.dev
+++ b/env/.env.dev
@@ -44,3 +44,4 @@ DOTNET_PATH=/usr/share/dotnet
 
 REACT_APP_SHAREPOINT_SITE_ID=7lcpdm.sharepoint.com,bf9359de-0f13-4b00-8b5a-114f6ef3bfb0,6609a994-5225-4a1d-bd05-a239c7b45f72
 REACT_APP_CONFIGURATION_LIST_ID=010b1be2-0df5-4ab1-b2a7-17e010aae775
+TEAMS_APP_PUBLISHED_APP_ID=290ff810-fe2e-450d-be1e-f2592e1f6d79
