--- a/tabs/package.json
+++ b/tabs/package.json
@@ -85,7 +85,8 @@
     ]
   },
   "resolutions": {
-    "@azure/core-rest-pipeline": "1.12.1"
+    "@azure/core-rest-pipeline": "1.12.1",
+    "@azure/core-util": "1.5.0"
   },
   "homepage": "."
 }
