--- a/tabs/package.json
+++ b/tabs/package.json
@@ -86,7 +86,8 @@
   },
   "resolutions": {
     "@azure/core-rest-pipeline": "1.12.1",
-    "@azure/core-util": "1.5.0"
+    "@azure/core-util": "1.5.0",
+    "@azure/core-auth": "1.4.0"
   },
   "homepage": "."
 }
