--- a/tabs/package.json
+++ b/tabs/package.json
@@ -87,7 +87,8 @@
   "resolutions": {
     "@azure/core-rest-pipeline": "1.12.1",
     "@azure/core-util": "1.5.0",
-    "@azure/core-auth": "1.4.0"
+    "@azure/core-auth": "1.4.0",
+    "@azure/core-client": "1.5.0"
   },
   "homepage": "."
 }
