--- a/tabs/package.json
+++ b/tabs/package.json
@@ -88,7 +88,9 @@
     "@azure/core-rest-pipeline": "1.12.1",
     "@azure/core-util": "1.5.0",
     "@azure/core-auth": "1.4.0",
-    "@azure/core-client": "1.5.0"
+    "@azure/core-client": "1.5.0",
+    "@azure/core-lro": "2.2.0",
+    "workbox-webpack-plugin": "6.4.1"
   },
   "homepage": "."
 }
