--- a/tabs/package.json
+++ b/tabs/package.json
@@ -90,7 +90,8 @@
     "@azure/core-auth": "1.4.0",
     "@azure/core-client": "1.5.0",
     "@azure/core-lro": "2.2.0",
-    "workbox-webpack-plugin": "6.4.1"
+    "workbox-webpack-plugin": "6.4.1",
+    "@azure/keyvault-keys": "4.8.0"
   },
   "homepage": "."
 }
