--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
     "debug.onTaskErrors": "abort",
     "azureFunctions.stopFuncTaskPostDebug": false,
-    "azureFunctions.showProjectWarning": false,
-    "csharp.suppressDotnetRestoreNotification": true
+    "azureFunctions.showProjectWarning": false
 }
