--- a/tabs/package.json
+++ b/tabs/package.json
@@ -1,33 +1,37 @@
 {
   "name": "@eeacms/eionet2-user-management",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "license": "MIT",
   "description": "Teams app for managing Eionet users.",
   "dependencies": {
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@fluentui/react-northstar": "^0.54.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fluentui/react-components": "^9.68.2",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@microsoft/applicationinsights-react-js": "^17.2.0",
-    "@microsoft/teams-js": "^1.9.0",
-    "@microsoft/teamsfx": "^0.5.0",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.1",
-    "@mui/x-data-grid": "^5.6.1",
-    "axios": "^0.26.1",
-    "date-fns": "^2.29.3",
-    "dompurify": "^2.3.4",
-    "msteams-react-base-component": "^3.1.0",
-    "node-sass": "^8.0.0",
+    "@microsoft/teams-js": "^2.31.1",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
+    "@mui/x-data-grid": "^7.29.12",
+    "@typespec/ts-http-runtime": "^0.3.1",
+    "axios": "^1.13.4",
+    "date-fns": "^2.30.0",
+    "dompurify": "^3.2.4",
     "postcss-scss": "^4.0.6",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^6.30.3",
     "react-scripts": "^5.0.1",
-    "validator": "^13.7.0"
+    "validator": "^13.15.26"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@microsoft/applicationinsights-web": "^3.2.1",
+    "@testing-library/dom": "^8.20.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
     "eslint": "^8.17.0",
@@ -38,8 +42,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-junit": "^14.0.0",
     "prettier": "^2.6.2",
+    "sass": "^1.89.2",
     "stylelint": "^14.8.5",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
@@ -47,13 +54,13 @@
   },
   "scripts": {
     "prepare": "npm run build",
-    "test": "jest",
+    "test": "jest --coverage",
     "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
     "start": "cross-env REACT_APP_VERSION=$npm_package_version GENERATE_SOURCEMAP=false react-scripts start",
-    "install:teamsfx": "npm install",
+    "install:teamsfx": "yarn install",
     "build": "cross-env REACT_APP_VERSION=$npm_package_version GENERATE_SOURCEMAP=false react-scripts build",
-    "build:teamsfx": "cross-env-shell \"env-cmd -f .env.teamsfx.${TEAMS_FX_ENV} npm run build\"",
-    "build:teamsfx:dev": "cross-env TEAMS_FX_ENV=dev npm run build:teamsfx",
+    "build:teamsfx": "cross-env-shell \"env-cmd -f .env.teamsfx.${TEAMS_FX_ENV} yarn build\"",
+    "build:teamsfx:dev": "cross-env TEAMS_FX_ENV=dev yarn build:teamsfx",
     "eject": "react-scripts eject",
     "stylelint": "node_modules/stylelint/bin/stylelint.js --allow-empty-input 'src/**/*.{css,scss}'",
     "stylelint:fix": "yarn stylelint --fix",
@@ -61,7 +68,7 @@
     "prettier:fix": "node_modules/.bin/prettier --single-quote --write 'src/**/*.{js,jsx,json,css,scss,md}'",
     "lint": "node_modules/eslint/bin/eslint.js --max-warnings=0 'src/**/*.{js,jsx}'",
     "lint:fix": "node_modules/eslint/bin/eslint.js --fix 'src/**/*.{js,jsx}'",
-    "pc": "npm run stylelint:fix & npm run prettier:fix & npm run lint:fix & npm run test"
+    "pc": "yarn stylelint:fix & yarn prettier:fix & yarn lint:fix & yarn test"
   },
   "eslintConfig": {
     "extends": [
@@ -82,18 +89,18 @@
     ]
   },
   "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
     "transformIgnorePatterns": [
-      "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"
+      "node_modules/(?!(@mui|@emotion|@babel|axios|jose|@microsoft)/)"
     ]
   },
-  "resolutions": {
-    "@azure/core-rest-pipeline": "1.12.1",
-    "@azure/core-util": "1.5.0",
-    "@azure/core-auth": "1.4.0",
-    "@azure/core-client": "1.5.0",
-    "@azure/core-lro": "2.2.0",
-    "workbox-webpack-plugin": "6.4.1",
-    "@azure/keyvault-keys": "4.4.0"
-  },
-  "homepage": "."
+  "lint": "eslint .",
+  "homepage": ".",
+  "packageManager": "npm@11.6.2"
 }
