--- a/tabs/package.json
+++ b/tabs/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.4",
     "date-fns": "^2.30.0",
     "dompurify": "^3.2.4",
+    "history": "^5.3.0",
     "postcss-scss": "^4.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
